# midterm2

./: pyproject.toml
examples/: data.txt  question1.py  question1.txt
src/: README.md  pyproject.toml
src/examples/: midterm.py  midterm2.py  midterm3.py
src/linalg/: linalg_interp.py
