[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "linalg"
version = "0.0.1"
authors = [
{ name="Ethan Grozell", email="ethan.grozell@ucalgary.ca" },
]
description="midterm code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/egrozell/midterm2"
